<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Disco Polo - Music Chart</string>

    <!-- zakladki -->
    <string name="tab_lista">Chart 7 days</string>
    <string name="tab_poczekalnia">Propositions</string>
    <string name="tab_nowosci">New</string>
    <string name="tab_mojalista">My</string>
    <string name="tab_wykonawcy">Artists</string>
    <string name="tab_notowanie">Hit of the month</string>

    <string name="tab_wykonawcy_filtruj">Search artist&#8230;</string>

    <!-- menu -->
    <string name="menu_odswiez">Refresh</string>
    <string name="menu_kontakt">Contact</string>
    <string name="menu_policy">Policy</string>
    <string name="menu_oprogramie">About program</string>
    <string name="menu_jezyk">Language</string>
    <string name="menu_ustawienia">Settings</string>

    <!-- menu jezyki -->
    <string name="jezyk_angielski">English</string>
    <string name="jezyk_polski">Polski</string>

    <!-- menu piosenki -->
    <string name="zaglosuj">Vote</string>
    <string name="liczba_glosow">Show votes (Watch Ad Video)</string>
    <string name="teledysk">Video</string>
    <string name="spotify">Play music</string>
    <string name="utwory_wykonawcy">Artist\'s songs</string>
    <string name="no_song_on_spotify">No Song on Spotify</string>
    <string name="spotify_go_to_app">Go to Spotify:</string>
    <string name="connecting_spotify">Connecting to Spotify...</string>
    <string name="connection_failed">Connection failed</string>
    <string name="spotify_login_required">Login to Spotify</string>
    <string name="spotify_login_instructions">Open Spotify app → Login → Return here → Tap retry</string>
    <string name="spotify_authorization_needed">Authorization Needed</string>
    <string name="spotify_authorization_instructions">Spotify will ask for permission when you retry</string>
    <string name="spotify_install_required">Install Spotify</string>
    <string name="spotify_install_instructions">Please install Spotify from Play Store, login, then try again</string>
    <string name="spotify_setup_needed">Spotify Setup Needed</string>
    <string name="spotify_setup_instructions">Install Spotify → Login → Try again</string>
    
    <!-- komunikaty -->
    <string name="text_cookie_title">Consent to Use of cookies</string>
    <string name="text_cookie">We use device identifiers to personalise content and ads, to provide social media features and to analyse our traffic. We also share such identifiers and other information from your device with our social media, advertising and analytics partners. <!--  <a href="https://www.google.com/about/company/user-consent-policy.html">See details</a> --> </string>
    <string name="text_cookie_close">I accept cookies</string>
    <string name="text_refresh_list">Please wait while retrieving current chart&#8230;</string>
    <string name="text_auth_refresh_list">Please wait while retrieving artist\'s song&#8230;</string>
    <string name="text_voting">Voting&#8230;</string>
    <string name="text_voting_error">Vote was not submitted</string>
    <string name="text_connection_error">No active internet connection! Turn on internet connection and choose Refresh from menu.</string>
    <string name="text_connection_error_title">Connection error!</string>
    <string name="text_exit_app">Press Back again to exit</string>
    <string name="text_too_many_votes">You have recently voted on this song. You can vote once per VOTES_INTERVAL minutes.</string>
    <string name="text_zmiana_jezyka">Changes will be visible after application restart</string>

    <string name="text_awans">↑ Up</string>
    <string name="text_spadek">↓ Down</string>
    <string name="text_glosow">Votes:</string>
    <string name="text_na_liscie_od">Added:</string>
    <string name="menu_settings">Settings</string>

    <string name="title_activity_utwory_wykonawcy">Artist\'s songs</string>

    <string name="email_subject">Android: DiscoPoloMusicChart</string>

    <string name="title_activity_oprogramie">About program</string>
    <string name="wersja_programu">Version</string>
    <string name="company_name">Grand Line</string>
    <string name="programmer1">Jacek Rodak</string>
    <string name="programmer2">Jarosław Wołoszyn</string>
    <string name="create_date">2024</string>
    <!-- <string name="banner_ad_unit_id">ca-app-pub-9534304538332188/7239850955</string> -->
    <string name="banner_ad_unit_id">ca-app-pub-9534304538332188/7835804093</string>
    <string name="banner_exnative_ad_unit_id">ca-app-pub-9534304538332188/1557608346</string>
    <string name="native_ad_unit_id">ca-app-pub-9534304538332188/7039312538</string>
    <string name="title_activity_ad_fullscreen">AdFullscreenActivity</string>
    <string name="loading">Please wait&#8230;</string>
    <string name="ad_cta">Button</string>
    
    <!-- Spotify Player -->
    <string name="album_art">Album Art</string>
    <string name="track_title">Track Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="no_track_playing">No track playing</string>
    <string name="powered_by_spotify">Powered by Spotify</string>

    <!-- YouTube Bottom Sheet -->
    <string name="expand_collapse">Expand/Collapse</string>
    <string name="close">Close</string>
    <string name="youtube_player_title">YouTube Player</string>
    <string name="loading_video">Loading video...</string>

</resources>

