<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_onPrimaryContainer"
    android:id="@+id/root">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/programmer1"
        android:textSize="25sp"
        tools:context=".OProgramie" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/programmer2"
        android:textSize="25sp"
        tools:context=".OProgramie" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/create_date"
        tools:context=".OProgramie" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:text="@string/company_name"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:context=".OProgramie" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:context=".OProgramie" />

    <TextView
        android:id="@+id/verName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/wersja_programu"
        tools:context=".OProgramie" />

</RelativeLayout>
